--- a/views/subViews/forecast.html
+++ b/views/subViews/forecast.html
@@ -37,18 +37,15 @@
 
                 <!-- Start temperature min/avg/max row -->
                 <div class="row row-forecast div-temperature-forecast">
-                    <div class="col-lg-4 col-md-4 col-sm-12 text-center rounded div-clickable-forecast"
-                        id="div-minTemp-1-forecast">
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center" id="div-minTemp-1-forecast">
                         <span class="info-forecast" id="minTemp-1-forecast"></span>
                         <p class="desc-forecast">Minimum temperature</p>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 text-center rounded div-clickable-forecast"
-                        id="div-avgTemp-1-forecast">
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center" id="div-avgTemp-1-forecast">
                         <span class="info-forecast" id="avgTemp-1-forecast"></span>
                         <p class="desc-forecast">Average temperature</p>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 text-center rounded div-clickable-forecast"
-                        id="div-maxTemp-1-forecast">
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center" id="div-maxTemp-1-forecast">
                         <span class="info-forecast" id="maxTemp-1-forecast"></span>
                         <p class="desc-forecast">Maximum temperature</p>
                     </div>
@@ -98,18 +95,15 @@
 
                 <!-- Start temperature min/avg/max row -->
                 <div class="row row-forecast div-temperature-forecast">
-                    <div class="col-lg-4 col-md-4 col-sm-12 text-center rounded div-clickable-forecast"
-                        id="div-minTemp-2-forecast">
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center" id="div-minTemp-2-forecast">
                         <span class="info-forecast" id="minTemp-2-forecast"></span>
                         <p class="desc-forecast">Minimum temperature</p>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 text-center rounded div-clickable-forecast"
-                        id="div-avgTemp-2-forecast">
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center" id="div-avgTemp-2-forecast">
                         <span class="info-forecast" id="avgTemp-2-forecast"></span>
                         <p class="desc-forecast">Average temperature</p>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 text-center rounded div-clickable-forecast"
-                        id="div-maxTemp-2-forecast">
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center" id="div-maxTemp-2-forecast">
                         <span class="info-forecast" id="maxTemp-2-forecast"></span>
                         <p class="desc-forecast">Maximum temperature</p>
                     </div>
@@ -159,18 +153,15 @@
 
                 <!-- Start temperature min/avg/max row -->
                 <div class="row row-forecast div-temperature-forecast">
-                    <div class="col-lg-4 col-md-4 col-sm-12 text-center rounded div-clickable-forecast"
-                        id="div-minTemp-3-forecast">
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center" id="div-minTemp-3-forecast">
                         <span class="info-forecast" id="minTemp-3-forecast"></span>
                         <p class="desc-forecast">Minimum temperature</p>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 text-center rounded div-clickable-forecast"
-                        id="div-avgTemp-3-forecast">
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center" id="div-avgTemp-3-forecast">
                         <span class="info-forecast" id="avgTemp-3-forecast"></span>
                         <p class="desc-forecast">Average temperature</p>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 text-center rounded div-clickable-forecast"
-                        id="div-maxTemp-3-forecast">
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center" id="div-maxTemp-3-forecast">
                         <span class="info-forecast" id="maxTemp-3-forecast"></span>
                         <p class="desc-forecast">Maximum temperature</p>
                     </div>
