--- a/views/footer.html
+++ b/views/footer.html
@@ -10,7 +10,7 @@
 
     <!-- Start footer content -->
     <section class="mb-4">
-        <!-- List of networks -->
+        <!-- Start list of networks -->
         <a class="btn btn-light m-1 btn-footer" style="background-color: #1DA1F2; color: white;"
             href="https://twitter.com/henchoznoe" role="button" target="_blank"><i class="fab fa-twitter"></i></a>
         <a class="btn btn-light m-1 btn-footer"
@@ -21,6 +21,7 @@
             href="https://github.com/ARATY7" role="button" target="_blank"><i class="fab fa-github"></i></a>
         <a class="btn btn-light m-1 btn-footer" style="background-color: #52B58A; color: white;"
             href="mailto:nhenchoz122@icloud.com" role="button"><i class="fa-solid fa-envelope"></i></a>
+        <!-- End list of networks -->
     </section>
     <!-- End footer content -->
 
