--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
 <div class="container">
 
     <!-- Start main title -->
-    <p class="display-3 my-5 title-view-anime d-flex justify-content-center">Welcome on météhenchoz&#160;!</p>
+    <p class="display-3 my-5 title-view-anime d-flex justify-content-center">Welcome on Météhenchoz&#160;!</p>
     <!-- End main title -->
 
     <!-- Start row 3 cities -->
@@ -50,8 +50,7 @@
     <p class="text-home text-justify">Above, the current temperature, time and weather is displayed for New York City,
         Paris and London.</p>
     <p class="text-home text-justify">If you want to see the weather for another city, you can either locate yourself or search for a city in the search bar.</p>
-    <p class="text-home text-justify">Weather data is provided by
-        <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.
+    <p class="text-home text-justify">Weather data is provided by <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.
     </p>
     <p class="text-home text-justify" style="padding-bottom: 120px;">
         This website was created by Noé Henchoz as part of a development module at the EMF. It uses HTML, CSS and
