--- a/views/subViews/current.html
+++ b/views/subViews/current.html
@@ -1,6 +1,14 @@
+<!-- 
+   But     : Current sub view 
+   Auteur  : Noé Henchoz
+   Date    : 08.06.2022 / v1.0 
+-->
+
 <!DOCTYPE html>
 
 <div class="container-fluid text-white">
+
+    <!-- Start row temp -->
     <div class="row row-current text-center">
         <div class="col-lg-4 col-md-4 col-sm-12 rounded div-clickable-current" id="div-temperature-current">
             <span id="temperature-current" class="info-current"></span><br>
@@ -15,7 +23,9 @@
             <p class="desc-current">Humidity</p>
         </div>
     </div>
+    <!-- End row temp -->
 
+    <!-- Start row cloud rate -->
     <div class="row row-current text-center">
         <div class="col-lg-4 col-md-4 col-sm-12"></div>
         <div class="col-lg-4 col-md-4 col-sm-12">
@@ -24,7 +34,9 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12"></div>
     </div>
+    <!-- End row cloud rate -->
 
+    <!-- Start row wind -->
     <div class="row row-current text-center">
         <div class="col-lg-4 col-md-4 col-sm-12 rounded div-clickable-current" id="div-wind-current">
             <span id="wind-current" class="info-current"></span><br>
@@ -39,7 +51,9 @@
             <p class="desc-current">Gust wind</p>
         </div>
     </div>
+    <!-- End row wind -->
 
+    <!-- Start row UV/Pressure/Precip -->
     <div class="row row-current text-center">
         <div class="col-lg-4 col-md-4 col-sm-12">
             <span id="uv-current" class="info-current"></span><br>
@@ -54,7 +68,9 @@
             <p class="desc-current">Precipitation</p>
         </div>
     </div>
+    <!-- End row UV/Pressure/Precip -->
 
+    <!-- Start row last update -->
     <div class="row row-current text-center">
         <div class="col-lg-4 col-md-4 col-sm-12"></div>
         <div class="col-lg-4 col-md-4 col-sm-12">
@@ -63,7 +79,9 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12"></div>
     </div>
+    <!-- End row last update -->
 
+    <!-- Start row button for update -->
     <div class="row row-current text-center">
         <div class="col-lg-4 col-md-4 col-sm-12"></div>
         <div class="col-lg-4 col-md-4 col-sm-12">
@@ -72,4 +90,6 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12"></div>
     </div>
+    <!-- End row button for update -->
+
 </div>
