--- a/views/subViews/map.html
+++ b/views/subViews/map.html
@@ -1,5 +1,13 @@
+<!-- 
+   But     : Map sub view 
+   Auteur  : Noé Henchoz
+   Date    : 08.06.2022 / v1.0 
+-->
+
 <!DOCTYPE html>
 
+<!-- Start map -->
 <div class="map-content py-4">
     <div id="mapid" class="mapid"></div>
 </div>
+<!-- End map -->
