--- a/views/home.html
+++ b/views/home.html
@@ -46,13 +46,13 @@
 
     <!-- Start description -->
     <p class="display-4 subtitle mb-5">Hi!</p>
-    <p class="text-home text-justify">On this site you will find the weather of your favourite cities!</p>
-    <p class="text-home text-justify">Above, the current temperature, time and weather is displayed for New York City,
+    <p class="text-home">On this site you will find the weather of your favourite cities!</p>
+    <p class="text-home">Above, the current temperature, time and weather is displayed for New York City,
         Paris and London.</p>
-    <p class="text-home text-justify">If you want to see the weather for another city, you can either locate yourself or search for a city in the search bar.</p>
-    <p class="text-home text-justify">Weather data is provided by <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.
+    <p class="text-home">If you want to see the weather for another city, you can either locate yourself or search for a city in the search bar.</p>
+    <p class="text-home">Weather data is provided by <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.
     </p>
-    <p class="text-home text-justify" style="padding-bottom: 120px;">
+    <p class="text-home" style="padding-bottom: 120px;">
         This website was created by Noé Henchoz as part of a development module at the EMF. It uses HTML, CSS and
         JavaScript.
     </p>
